Migrate chapter-08 to Quarkus 3.2.0